force-app/main/default/objects/NI_Integration__c/NI_Integration__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-006413

Initially created for managing NI Partner Accounts</description>
    <label>Integration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>