force-app/main/default/objects/NI_Integration__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <description>NICC-053638</description>
    <label>Approved By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21c Museum Hotels</fullName>
            </value>
            <value>
                <fullName>25Hours Hotels</fullName>
            </value>
            <value>
                <fullName>Abad Group</fullName>
            </value>
            <value>
                <fullName>Absolute Hotel Services Group</fullName>
            </value>
            <value>
                <fullName>Accor Company</fullName>
            </value>
            <value>
                <fullName>Ace Hotel Group</fullName>
            </value>
            <value>
                <fullName>ACHAT Hotels</fullName>
            </value>
            <value>
                <fullName>Affinia</fullName>
            </value>
            <value>
                <fullName>African Hotels &amp; Adventures</fullName>
            </value>
            <value>
                <fullName>AJ Capital Partners</fullName>
            </value>
            <value>
                <fullName>Allia Hotels</fullName>
            </value>
            <value>
                <fullName>Alp&apos;Azur Hotels</fullName>
            </value>
            <value>
                <fullName>Althoff Hotel Collection</fullName>
            </value>
            <value>
                <fullName>Alt Hotels</fullName>
            </value>
            <value>
                <fullName>Altis Hotel Group</fullName>
            </value>
            <value>
                <fullName>AMAKS Hotels &amp; Resorts</fullName>
            </value>
            <value>
                <fullName>Aman Resort Services Ltd</fullName>
            </value>
            <value>
                <fullName>Amerian Hoteles</fullName>
            </value>
            <value>
                <fullName>Amrath Hotels</fullName>
            </value>
            <value>
                <fullName>Andrew Brownsword Hotels</fullName>
            </value>
            <value>
                <fullName>Anemon Hotels</fullName>
            </value>
            <value>
                <fullName>APA Hotel Co., Ltd.</fullName>
            </value>
            <value>
                <fullName>Apex Hotels</fullName>
            </value>
            <value>
                <fullName>Apollo Hotels &amp; Resorts</fullName>
            </value>
            <value>
                <fullName>Aqua Hospitality</fullName>
            </value>
            <value>
                <fullName>Aranzazu Hoteles</fullName>
            </value>
            <value>
                <fullName>Arcadia Hotels AF</fullName>
            </value>
            <value>
                <fullName>Archipelago International</fullName>
            </value>
            <value>
                <fullName>Arcona Hotels</fullName>
            </value>
            <value>
                <fullName>ARCOTEL Hotels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>