force-app/main/default/objects/NI_Integration__c/fields/Data_Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Transfer_Type__c</fullName>
    <description>NICC-042337
How the data is exchanged between connected systems, e.g. file transfer, XML.</description>
    <inlineHelpText>How the data is exchanged between connected systems, e.g. file transfer, XML.</inlineHelpText>
    <label>Data Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XML</fullName>
                <label>XML/Real Time</label>
            </value>
            <value>
                <fullName>Batched</fullName>
            </value>
            <value>
                <fullName>Deployed/Remote</fullName>
            </value>
            <value>
                <fullName>File Based</fullName>
            </value>
            <value>
                <fullName>REST API</fullName>
            </value>
            <value>
                <fullName>SOAP API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>