force-app/main/default/objects/NI_Integration__c/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation</label>
    <type>Checkbox</type>
</CustomField>