force-app/main/default/objects/NI_Integration__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <description>The features available with this integration.</description>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create group header in PMS</fullName>
            </value>
            <value>
                <fullName>Manage guestrooms in PMS</fullName>
            </value>
            <value>
                <fullName>Manage guestrooms in either system</fullName>
            </value>
            <value>
                <fullName>Manage guestrooms manually in both sys</fullName>
            </value>
            <value>
                <fullName>View guest reservations for booking</fullName>
            </value>
            <value>
                <fullName>View rooming list for bookings</fullName>
            </value>
            <value>
                <fullName>View guest reservation details</fullName>
            </value>
            <value>
                <fullName>View future reservations (pickup)</fullName>
            </value>
            <value>
                <fullName>View actualized rooms (pickup)</fullName>
            </value>
            <value>
                <fullName>Company profiles (PMS)</fullName>
            </value>
            <value>
                <fullName>Create/update guest profiles (PMS)</fullName>
            </value>
            <value>
                <fullName>Create/update travel profiles (PMS)</fullName>
            </value>
            <value>
                <fullName>Create company profiles (both ways)</fullName>
            </value>
            <value>
                <fullName>Create folio transactions (PMS)</fullName>
            </value>
            <value>
                <fullName>Create guest activities (POS)</fullName>
            </value>
            <value>
                <fullName>Create guest reservation details (PMS)</fullName>
            </value>
            <value>
                <fullName>Create member accounts (Loyalty)</fullName>
            </value>
            <value>
                <fullName>Guest reservation preferences (PMS)</fullName>
            </value>
            <value>
                <fullName>Guest stay statistics - B&amp;E Rev</fullName>
            </value>
            <value>
                <fullName>Guest stay statistics - F&amp;B Rev</fullName>
            </value>
            <value>
                <fullName>Guest stay statistics - Guestroom Rev</fullName>
            </value>
            <value>
                <fullName>Guest stay statistics - Other Rev</fullName>
            </value>
            <value>
                <fullName>Real time guest profile lookups</fullName>
            </value>
            <value>
                <fullName>Receive/view survey links</fullName>
            </value>
            <value>
                <fullName>Receive/view survey results</fullName>
            </value>
            <value>
                <fullName>Reward certificate lookup and processing</fullName>
            </value>
            <value>
                <fullName>Room Type statistics - B&amp;E Rev</fullName>
            </value>
            <value>
                <fullName>Room Type statistics - F&amp;B Rev</fullName>
            </value>
            <value>
                <fullName>Room Type statistics - Guestroom Rev</fullName>
            </value>
            <value>
                <fullName>Room Type statistics - Other Rev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>