force-app/main/default/objects/NI_Integration__c/fields/Hosted_URL__c.field-meta.xml
<CustomField>
    <fullName>Hosted_URL__c</fullName>
    <description>NICC-042337
URL Of the hosted system</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL Of the hosted system</inlineHelpText>
    <label>Hosted URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>