force-app/main/default/objects/NI_Integration__c/fields/HRM_Module__c.field-meta.xml
<CustomField>
    <fullName>HRM_Module__c</fullName>
    <label>HRM Module</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HRM Guest &amp; Social Relations</fullName>
            </value>
            <value>
                <fullName>HRM Multi-Channel Marketing</fullName>
            </value>
            <value>
                <fullName>HRM Loyalty</fullName>
            </value>
            <value>
                <fullName>HRM Sales &amp; Catering</fullName>
            </value>
            <value>
                <fullName>HRM Sales Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>