force-app/main/default/objects/NI_Integration__c/fields/Integration_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Product_Type__c</fullName>
    <description>Indicates the status of the Integration
UPDATED 04/03/2020 PER NICC-042337</description>
    <inlineHelpText>Indicates the status of the Integration</inlineHelpText>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom Certified</fullName>
            </value>
            <value>
                <fullName>Custom - Non-Supported Data</fullName>
            </value>
            <value>
                <fullName>Custom - Supported Data</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>Demand Data Validation</fullName>
            </value>
            <value>
                <fullName>Development/Certification</fullName>
            </value>
            <value>
                <fullName>Do Not Sell</fullName>
            </value>
            <value>
                <fullName>In Certification</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>In Pilot</fullName>
            </value>
            <value>
                <fullName>In Plan</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Certified</fullName>
            </value>
            <value>
                <fullName>Released/GTM</fullName>
            </value>
            <value>
                <fullName>Researching</fullName>
            </value>
            <value>
                <fullName>Vendor Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>