force-app/main/default/objects/NI_Integration__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>UPDATED 04/03/2020 PER NICC-042337; NICC-045557</description>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address Search &amp; Verification</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
            <value>
                <fullName>Call Accounting</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Credit Card / Payment</fullName>
            </value>
            <value>
                <fullName>Digital Signage (EMS)</fullName>
            </value>
            <value>
                <fullName>Distribution Channel</fullName>
            </value>
            <value>
                <fullName>E-mail Marketing</fullName>
            </value>
            <value>
                <fullName>Exports</fullName>
            </value>
            <value>
                <fullName>Guest Facing</fullName>
            </value>
            <value>
                <fullName>High Speed Internet (HSIA)</fullName>
            </value>
            <value>
                <fullName>Hotel System</fullName>
            </value>
            <value>
                <fullName>Inventory &amp; Procurement</fullName>
            </value>
            <value>
                <fullName>Key card Systems</fullName>
            </value>
            <value>
                <fullName>Mini Bar</fullName>
            </value>
            <value>
                <fullName>One Way Guest Reservation</fullName>
            </value>
            <value>
                <fullName>Other System</fullName>
            </value>
            <value>
                <fullName>Pay TV</fullName>
            </value>
            <value>
                <fullName>Phone Systems</fullName>
            </value>
            <value>
                <fullName>Point of Sale (POS)</fullName>
            </value>
            <value>
                <fullName>Property Management System ( PMS )</fullName>
                <label>Property Management System (PMS)</label>
            </value>
            <value>
                <fullName>Revenue Management System (RMS)</fullName>
            </value>
            <value>
                <fullName>Room Diagramming</fullName>
            </value>
            <value>
                <fullName>Survey System</fullName>
            </value>
            <value>
                <fullName>Voice Mail</fullName>
            </value>
            <value>
                <fullName>Yield / RMS management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>