force-app/main/default/objects/NI_Integration__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>