force-app/main/default/objects/NI_Integration__c/fields/Parent_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Group__c</fullName>
    <description>Parent Product Group of the related SKU (Product)</description>
    <formula>SKU__r.Product_Group__r.NI_Parent_Product_Group__r.Name</formula>
    <inlineHelpText>Parent Product Group of the related SKU (Product)</inlineHelpText>
    <label>Parent Product Group</label>
    <type>Text</type>
</CustomField>