force-app/main/default/objects/NI_Integration__c/fields/PCI_Compliant__c.field-meta.xml
<CustomField>
    <fullName>PCI_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-046378</description>
    <inlineHelpText>Check this box if the integration is PCI compliant</inlineHelpText>
    <label>PCI Compliant</label>
    <type>Checkbox</type>
</CustomField>