force-app/main/default/objects/NI_Integration__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-040635: the primary contact for this integration</description>
    <inlineHelpText>Please select the primary contact for this integration.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integrations (Primary Contact)</relationshipLabel>
    <relationshipName>Integrations2Contact</relationshipName>
    <type>Lookup</type>
</CustomField>