force-app/main/default/objects/NI_Integration__c/fields/Product_Release__c.field-meta.xml
<CustomField>
    <fullName>Product_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Release associated with this Integration</description>
    <inlineHelpText>Product Release associated with this Integration</inlineHelpText>
    <label>Product Release</label>
    <referenceTo>NI_Product_Release__c</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>