force-app/main/default/objects/NI_Integration__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>NICC-042337
The date that the interface can be sold; e.g. beta/pilot is complete and support for the interface follows normal customer care processes.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the interface can be sold; e.g. beta/pilot is complete and support for the interface follows normal customer care processes.</inlineHelpText>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>