force-app/main/default/objects/NI_Integration__c/fields/Requires_Orange_Box__c.field-meta.xml
<CustomField>
    <fullName>Requires_Orange_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-045623</description>
    <inlineHelpText>check this box if the integration requires Orange Box</inlineHelpText>
    <label>Requires Orange Box.?</label>
    <type>Checkbox</type>
</CustomField>