force-app/main/default/objects/NI_Integration__c/fields/Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-036841: Sales Contact</description>
    <inlineHelpText>Please enter the Sales Contact</inlineHelpText>
    <label>Sales Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integrations (Sales Contact)</relationshipLabel>
    <relationshipName>Integrations1</relationshipName>
    <type>Lookup</type>
</CustomField>