force-app/main/default/objects/NI_Integration__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Product object</description>
    <label>SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>NI_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>