force-app/main/default/objects/NI_Integration__c/fields/Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>Support_Contact__c</fullName>
    <businessOwnerUser>sleduc@newmarketinc.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-036841: Support Contact</description>
    <inlineHelpText>please enter the Support Contact</inlineHelpText>
    <label>Support Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>