force-app/main/default/objects/NI_Integration__c/fields/TLS_Version__c.field-meta.xml
<CustomField>
    <fullName>TLS_Version__c</fullName>
    <description>NICC-044004: TLS Version</description>
    <inlineHelpText>TLS Version</inlineHelpText>
    <label>TLS Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TLS 1.0</fullName>
            </value>
            <value>
                <fullName>TLS 1.1</fullName>
            </value>
            <value>
                <fullName>TLS 1.2</fullName>
            </value>
            <value>
                <fullName>TLS 1.3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>