force-app/main/default/objects/NI_Integration__c/fields/Vendor_Minimum_Version__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Minimum_Version__c</fullName>
    <description>The minimum version of the third party system that the vendor supports with the integration.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The minimum version of the third party system that the vendor supports with the integration.</inlineHelpText>
    <label>Vendor Minimum Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>