force-app/main/default/objects/NI_Integration__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Partner Accounts (this is the name of the third party vendor).</description>
    <label>Vendor Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Account</value>
        </filterItems>
        <infoMessage>Only Accounts with the &quot;Partner Account&quot; record type appear in this lookup window</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>NI_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>