force-app/main/default/objects/NI_Integration__c/recordTypes/Pending_Integration.recordType-meta.xml
<RecordType>
    <fullName>Pending_Integration</fullName>
    <active>true</active>
    <description>This is for pending integrations that provides a link to the targeted product release record.</description>
    <label>Pending Integration</label>
</RecordType>