force-app/main/default/objects/NI_Integration__c/recordTypes/Standard_Integration.recordType-meta.xml
<RecordType>
    <fullName>Standard_Integration</fullName>
    <active>true</active>
    <description>This is for proven integrations that allow the messages and features to be described.</description>
    <label>Standard Integration</label>
</RecordType>