force-app/main/default/objects/NI_Integration__c/recordTypes/Standard_Pre2014.recordType-meta.xml
<RecordType>
    <fullName>Standard_Pre2014</fullName>
    <active>true</active>
    <description>This is for integrations developed prior to 2014. Does not include PM App fields.</description>
    <label>Standard - Pre2014</label>
</RecordType>