force-app/main/default/objects/NI_Integration__c/recordTypes/Unproven_Integration.recordType-meta.xml
<RecordType>
    <fullName>Unproven_Integration</fullName>
    <active>true</active>
    <description>This is used when integration is unproven. Allows for impacted customers to be associated</description>
    <label>Unproven Integration</label>
</RecordType>