force-app/main/default/objects/NI_Integration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Integration_Product_Type__c</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Amadeus_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>