force-app/main/default/objects/NI_Integration__c/listViews/APMA_Integrations3.listView-meta.xml
<ListView>
    <fullName>APMA_Integrations3</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Integration_Product_Type__c</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Amadeus_Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Amadeus_Product__c</field>
        <operation>equals</operation>
        <value>APMA</value>
    </filters>
    <label>APMA Integrations</label>
</ListView>