force-app/main/default/objects/NI_Integration__c/listViews/RMS_Integrations_Delphi.listView-meta.xml
<ListView>
    <fullName>RMS_Integrations_Delphi</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Vendor_System_Name__c</columns>
    <columns>Vendor_Minimum_Version__c</columns>
    <columns>Integration_Product_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Type__c</field>
        <operation>equals</operation>
        <value>Revenue Management System (RMS)</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>fdc</value>
    </filters>
    <label>RMS Integrations - Delphi</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>